--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
     </section>
 
-    <section style="padding: 4rem 0" class="bg-light">
+      <section style="padding: 4rem 0" class="bg-light">
       <div id="results" class="col-lg-8 mx-auto">
         <h1>Q&A</h1>
       </div>
@@ -208,15 +208,18 @@
         </div> 
          <div>
           <h3>Why didn't Waylay invest more in Device Management?</h3>
-          <p>In our view, that battle is already won. We see a few things: either Azure/AWS IoT, or sometimes players like Cumulocity or people doing all sorts things with OPC/UA or MQTT bridges - custom made. Waylay also provide MQTT broker and device identity mgmt., and some customers are using it, but we stop short of building firmware, this is not our thing. Having said that, we invest heavily in <a href="https://docs.waylay.io/#/features/data_ingestion/">Data Ingestion Layer</a>, which enables us to consume data directly from all IoT platforms out there. In that sense, we can 'waylay' other platforms and seamlessly get data and digital twin information into our system and the rest of magic happens Waylay side.</p> 
-        </div>     
+          <p>In our view, that battle is already won. We see a few things: either Azure/AWS IoT, or sometimes players like Cumulocity or people doing all sorts of things with OPC/UA or MQTT bridges - custom made. Waylay also provides MQTT broker and device identity mgmt., and some customers are using it, but we stop short of building firmware, this is not our thing. Having said that, we invest heavily in <a href="https://docs.waylay.io/#/features/data_ingestion/">Data Ingestion Layer</a>, which enables us to consume data directly from all IoT platforms out there. In that sense, we can 'waylay' other platforms and seamlessly get data and digital twin information into our system and the rest of magic happens Waylay side.</p> 
+        </div>  
+        <div>
+          <h3>How is this article and approach different from platforms featured in Gartner catogories and reports (RPA, Low Code, Automation...)?</h3>
+          <p>We tried a bottom up approach, looking at infra required to build applications. If you look at any slide on the cloud infra from the distance, you will observe many things repeating: lambda's, dynamoDB, SNS, S3, AWS Step Functions, Event Bridge, Hubs, Azure Functions, Mongo, Elastic, Redis etc... So the question for us was, if all these things are required to build modern apps, what sets one offer apart from another? How do customers make choices in the end? That's what this article wants to answer, without getting too much into the Gartner way of looking into the world, we tried the same but from another angle.</p> 
+        </div> 
+        <div>
+          <h3>How can I get in touch with Waylay and discuss it further?</h3>
+          <p>You can always reach out to us on <a href="https://www.waylay.io/company/contact"> this link</a>. We’re happy to help.</p> 
+        </div>    
       </div>
     </section>
-
-
-
-
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
