--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div> 
         <div>
           <h3>Why did you put Kafka-Influx-Grafana in the list?</h3>
-          <p>This is a shortcut for saying "do it yourself". Of course you can easily add there mongo, redis, but let us not forget you still need a security/access layer on top etc... Sky's the limit what you can build this way, so is the time and price to build a solution this way.</p> 
+          <p>This is a shortcut for saying "do it yourself". Of course you can easily add there mongo, redis, but let us not forget you still need a security/access layer on top etc... Sky's the limit what you can build this way, so is the time and price.</p> 
         </div> 
         <div>
           <h3>Didn't you also use similar components to build Waylay?</h3>
