--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div> 
         <div>
           <h3>Didn't you also use similar components to build Waylay?</h3>
-          <p>Yes indeed! But we do it for living (and for a long time) and around our own patented automation technology, which brings all these things together in the most comprehensive possible way.</p> 
+          <p>Yes indeed! But we do it for living (and for a long time) and around our own patented automation technology, which brings all these things together in the most comprehensive/usefull way.</p> 
         </div> 
          <div>
           <h3>Why didn't Waylay invest more in Device Management?</h3>
