--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
         <div>
           <h3>Didn't you also use similar components to build Waylay?</h3>
           <p>Yes indeed! But we do it for living (and for a long time) and around our own patented automation technology, which brings all these things together in the most comprehensive/usefull way.</p> 
+        </div>
+        <div>
+          <h3>Why is Node RED in the list?</h3>
+          <p>Many people asks us about the comparision with Node RED, and that's the only reason we have put it here. Node RED is a great tool to put in the edge gateway (for protocol and payload aggregation). Many gateways are using it. We are not into this market (we are into edge automation), but that is another concept all together.</p> 
         </div> 
          <div>
           <h3>Why didn't Waylay invest more in Device Management?</h3>
