changed a little but

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li>APIs & serverless, how easy is to add additional APIs into your solution</li>
             <li>Zero-touch-automation (configure logic once, run always). From provisioning perspective, is not the same level of complexity to operate few hundreds of assets or few milions.</li>
             <li>Scalability</li>
-            <li>Explainability (is it clear what is going on once the platform is in operations?)</li>
+            <li>Explainability (is it clear what is going on once the application is in operations?)</li>
             <li>Integration Simplicity (how easy is to set up the tool chain, how easy is to create an application on top?). This metric reflects <strong>the overall cost and time (to market) </strong> to create an end to end solution</li>
             <li>Data Ingestion (different protocols, payloads formats etc.)</li>
             <li>LPWAN support (Sigfox, LoRa, NBIoT)</li>
