--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <br>
       <div class="container">
-         <p>Please hover over the <i> Requirements</i> legend in order to see in the middleware requirements for one vertical. On the radar chart, the scale for each metric goes from 0 to 100%. indicating the relative percentage of that feature required for a given vertical.</p>
+         <p>Please hover over the <i> Requirements</i> legend in order to view middleware requirements for one vertical. On the radar chart, the scale for each metric goes from 0 to 100%. indicating the relative percentage of that feature required for a given vertical.</p>
         <div class="radarChartIndustries"></div>
         <div class="legend2"></div>
       </div>
