--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </pre>
         </div>
         <div>
-          <h3>Why didn't you include feature X in the score?</h3>
+          <h3>Why didn't you include feature X in the benchmark?</h3>
           <p>There are things like end user management, or UI widgets etc that are necessary to build final applications, but we didn't see them as a middleware requirement as these are often one-off features implemented by end customers. But we could be wrong, tell us.</p> 
         </div> 
         <div>
