--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <p>That's a great question. For instance, you may argue that insurance or market automations are verticals. Yes there are, but we are simply not active in them, hence we didn't include them. That doesn't mean we will not at one time, but we simply don't understand either the vertical enough, or players in that vertical right now.</p> 
         </div>  
         <div>
-          <h3>Why did you skip a vertical competitor X?</h3>
+          <h3>Why did you skip a competitor X for a vertical Y?</h3>
           <p>Another great question. For each vertical, first and foremost, you have vertical application providers, not middleware providers. They match 100% of what they think you need. If that is the case for you, no need to search any further.</p> 
         </div> 
         <div>
