--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>  
         <div>
           <h3>Why did you skip a competitor X for a vertical Y?</h3>
-          <p>Another great question. For each vertical, first and foremost, you have vertical application providers, not middleware providers. They match 100% of what they think you need. If that is the case for you, no need to search any further.</p> 
+          <p>Another great question. For each vertical, first and foremost, you have vertical application providers, not middleware providers. They match 100% of what they think you need. If that is the case with you, no need to search any further.</p> 
         </div> 
         <div>
           <h3>Why did you skip a middleware competitor X?</h3>
