--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div> 
         <div>
           <h3>Why did you skip a middleware competitor X?</h3>
-          <p>We skip them all, except the big two. We are not able to follow every competitor closely enough and therefore we would be getting at risk of under or over reporting each of them. Exceptions are AWS and Azure, where we follow very closely what they do, as in most of the cases, the customer choices are: AWS or Azure, "do it myself", or vendor X/Y/Z. We moslty find ourselves facing the first (big two) or second (do it myself) as a competitor.</p> 
+          <p>We skip them all, except the big two. We are not able to follow every competitor closely enough and therefore we would be getting at risk of under or over reporting each of them. Exceptions are AWS and Azure, where we follow very closely what they do, as in most of the cases, the customer choices are: AWS or Azure, "do it myself", or vendor X/Y/Z. We mostly find ourselves facing the first (big two) or second (do it myself) as a competitor.</p> 
         </div> 
         <div>
           <h3>How are you sure that you got a metric for that competitor right?</h3>
