--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div> 
         <div>
           <h3>How are you sure that you got a metric for that competitor right?</h3>
-          <p>We are not, we might be wrong. But we also listen to what our customers have tried in the past, and where the weak spots and our strengths are, otherwise, why would anyone select Waylay? Interesting observation is that often a particular middleware vendor's weak spot is compensated by skilled (and pricey) ISV, so the end customer gets a final solution that meets her needs (of course time to market or the price is something you add on top).</p> 
+          <p>We are not, we might be wrong. But we also listen to what our customers have tried in the past, and where the weak spots and our strengths are, otherwise, why would anyone select Waylay? Interesting observation is that often a particular middleware vendor's weak spot is compensated by skilled (and pricey) ISV, so in the end, a customer gets a final solution that meets her needs (of course time to market or the price is something you add on top).</p> 
         </div>  
         <div>
           <h3>Why you didn't include the price/TCO in this score?</h3>
