--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>  
         <div>
           <h3>Why you didn't include the price/TCO in this score?</h3>
-          <p>This is hard to calculate, even if the vendors like AWS/Azure are doing volume charging (and discounts). Unless you know the exact customer use case, it is hard to compute that cost. That's a big issue. Another one is that <strong> the integration cost is inversely proportional to the Integration Simplicity Metric </strong>, but that alone depends on the time and skills and price of ISVs. Still it is safe to say, the bigger the gap in score, the end solution will be more costly and will take longer to build.</p> 
+          <p>This is hard to calculate, even if the vendors like AWS/Azure are doing volume charging (and discounts). Unless you know the exact customer use case, it is hard to compute that cost. That's a big issue. Another one is that <strong> the integration cost is inversely proportional to the `Integration Simplicity` </strong> metric, but that alone depends on the time and integration/expert skills of a particular ISV. Still it is safe to say, the bigger the gap in score, the end solution will be more costly and will take longer to build.</p> 
         </div> 
         <div>
           <h3>Why did you put Kafka-Influx-Grafana in the list?</h3>
