--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LT32H2QP6C');
+  gtag('config', 'G-7KFFSC1J24');
 </script>
 
   <meta charset="utf-8">
