--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p>Result is computed as a total sum (overlap) between the vertical requirement and the middleware for each metric, presented as the percentage (0-100%). Please note that in most of the cases middleware platforms are complemented by other tools and applications in order to create end to end solutions anyway. Therefore this score indicates how much work is still required in the middleware before customers can build the end solution on top (mobile app, customer facing app etc.). Every score less than 50-60% indicates that additional tools and applications will be required to close the automation gap first.</p>
       </div>
       <div class="container">
-        <canvas id="myChart" style="width:100%"></canvas>
+        <canvas id="myChart" style="width:100%; height: 350px;"></canvas>
       </div>
       <div class="container">
         <hr>
