--- a/index.html
+++ b/index.html
@@ -229,6 +229,24 @@
       </div>
     </section>
 
+    <!-- Modal -->
+     <div id="myModal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">More info</h5>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>This is a simple Bootstrap modal. Click the "Cancel button", "cross icon" or "dark gray area" to close or hide the modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -270,7 +288,10 @@
       $('[data-toggle="tooltip"]').on("mouseleave", function(){
         $(this).tooltip("hide"); 
       })
-    });
+    })
+    $(".modal-header").text("Header"); 
+    $(".modal-body").text("erere"); 
+    $('#myModal').modal('hide'); 
 
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
